[package]
name = "reward-sender"
version = "0.1.4"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.67"
clap = { version = "4.1.13", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.10.0"

# AWS signer issue introduced in 2.0.1. Fix merged but new version not released yet.
ethers = "=2.0.0"
ethers-core = "=2.0.0"
ethers-signers = { version = "=2.0.0", features = ["aws"] }

hex = "0.4.3"
log = "0.4.17"
reqwest = { version = "0.11.15", default-features = false, features = ["json", "rustls-tls"] }
rusoto_core = { version = "0.48.0", default-features = false, features = ["rustls"] }
rusoto_kms = { version = "0.48.0", default-features = false, features = ["rustls"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.2"
sha2 = "0.10.6"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
